--- a/contact-me.html
+++ b/contact-me.html
@@ -7,48 +7,41 @@
 </head>
 <body>
    <h1>Contact Me</h1>
-   <form action="" method="post">
-    <table>
-        <tr>
-            <td>
-                <div>
-                    <label for="fname">First Name:</label>
-                    <input id="fname" name="fname" type="text" required />
-                </div>
-            </td>
-            <td>
-                <div>
-                    <label for="lname" autocomplete="off">Last Name:</label>
-                    <input id="lname" name="lname" type="text" required />
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <div>
-                    <label for="user-email">Email:</label>
-                    <input id="user-email" name="email" type="email" placeholder="you@example.com" height="auto" required />
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div>
-                    <label for="message">Your Message:</label><br />
-                    <textarea id="message" name="message" rows="10" cols="50"
-                    placeholder="Enter your message with full details" required></textarea>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div>
-                    <input type="submit" value="Send my message" />
-                    <input type="reset" value="Clear all inputs" />
-                </div>
-            </td>
-        </tr>
-    </table>
+   <form action="/" method="post">
+    <div>
+        <label for="fname">First Name:</label>
+        <br/>
+        <input id="fname" name="fname" type="text" required/>
+    </div>
+    <br/>
+    <div>
+        <label for="lname">Last Name:</label>
+        <br/>
+        <input id="lname" name="lname" type="text" required/>
+    </div>
+    <br/>
+    <div>
+        <label for="user-email">Email:</label>
+        <br/>
+        <input id="user-email" name="email" type="email" required/>
+    </div>
+    <br/>
+    <div>
+        <label for="message">Your Massage:</label>
+        <br/>
+        <textarea id="message" rows="10" cols="50" required></textarea>
+    </div>
+    <br/>
+    <div>
+        <input type="submit"/>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;
+        <input type="reset" />
+    </div>
    </form> 
 </body>
 </html>
